<resources>
    <string name="app_name">AppMall</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification">Selecciona datos en origen y final para continuar</string>
    <string name="hall">Hall Entrada</string>
    <string name="lavabo">Lavabos</string>
    <string name="reset">No hay ninguna selección</string>
    <string name="establecida">RUTA ESTABLECIDA</string>
    <string name="zona_comercial">Zona Comercial - Tiendas</string>
    <string name="ascensor">Ascensor</string>
    <string name="supermercado">Supermercado</string>
    <string name="out">Salida Out</string>
    <string name="vestuario">Vestuario</string>
    <string name="parking">Parking</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="escaleras">Escaleras</string>
    <string name="secuencia">hlzsaepo</string>
    <string name="maps">PLANTAS HOSPITAL</string>
    <string name="iniciar">INICIAR</string>
    <string name="avanzar">AVANZAR</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="retroceder">RETROCEDER</string>
    <string name="plantas_cc">PLANTAS CENTRO</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="seleccion">Selecciona origen y destino</string>
    <string name="seleccion_spin">Has seleccionado: </string>
    <string name="seleccion_spin_dos">Ninguna selección</string>
    <string name="hint_uno">Selecciona punto de Origen</string>
    <string name="hint_dos">Selecciona punto de Llegada</string>
    <string name="description_image_1">Planta Baja Hospital</string>
    <string name="description_image_2">Planta 1ª Hospital</string>
    <string name="description_image_3">Planta 2ª Hospital</string>
    <string name="description_image_4">Planta 3ª Hospital</string>
    <string name="description_zoom_touch_close">Planta Baja Hospital</string>
    <string name="welcome">Bienvenido</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="signed_in">Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="reset_ok">Reset realizado correctamente</string>

</resources>
