<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/thumb_button_1"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:background="@drawable/border"
                android:contentDescription="@string/description_image_1"
                android:elevation="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/planta_uno" />

        </LinearLayout>

        <ImageView
            android:id="@+id/expanded_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_zoom_touch_close"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtplanta_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:background="@drawable/myrect"
                android:elevation="5dp"
                android:padding="5dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="invisible"
                tools:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#607D8B"
            android:padding="10dp"
            android:text="@string/plantas_cc"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>